# segatools

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  Package.mk  README.md  cross-mingw-32.txt  cross-mingw-64.txt  docker-build.bat  initpki  meson.build  mkdist  precompiled.h
.gitlab/issue_templates/: Bug.md  Feature.md
.gitlab/merge_request_templates/: Bugfix.md  Feature.md
aimeio/: aimeio.c  aimeio.def  aimeio.h  meson.build
amex/: amex.c  amex.h  cfg.c  cfg.h  config.c  config.h  ds.c  ds.h  eeprom.c  eeprom.h  gpio.c  gpio.h  guid.c  jvs.c  jvs.h  meson.build  nvram.c  nvram.h  sram.c  sram.h
board/: aime-dll.c  aime-dll.h  config.c  config.h  guid.c  guid.h  io3.c  io3.h  io4.c  io4.h  meson.build  sg-cmd.c  sg-cmd.h  sg-frame.c  sg-frame.h  sg-led-cmd.h  sg-led.c  sg-led.h  sg-nfc-cmd.h  sg-nfc.c  sg-nfc.h  sg-reader.c  sg-reader.h  slider-cmd.h  slider-frame.c  vfd.c  vfd.h
cardhook/: _com12.c  _com12.h  cardhook.def  dllmain.c  meson.build
chunihook/: chuni-dll.c  chuni-dll.h  chunihook.def  config.c  config.h  dllmain.c  jvs.c  jvs.h  meson.build  slider-cmd.h  slider-frame.c  slider-frame.h  slider-hook.c  slider.c  slider.h
chuniio/: chuniio.c  chuniio.def  chuniio.h  config.c  config.h  meson.build
divahook/: _com10.c  _com10.h  config.c  config.h  diva-dll.c  diva-dll.h  divahook.def  dllmain.c  jvs.c  jvs.h  meson.build  slider-hook.c  slider.c  slider.h
divaio/: config.c  config.h  divaio.c  divaio.def  divaio.h  meson.build
doc/: chunihook.md  development.md  idzhook.md
doc/config/: chunithm.md  common.md  initiald.md
hooklib/: clock.c  clock.h  config.c  config.h  dll.c  dll.h  dns.c  dns.h  dvd.c  dvd.h  fdshark.c  gfx.c  gfx.h  meson.build  path.c  path.h  reg.c  reg.h  setupapi.c  setupapi.h  spike.c  spike.h
iccard/: aime.c  aime.h  felica.c  felica.h  meson.build  mifare.h
idzhook/: _com10.c  config.c  config.h  dllmain.c  idz-dll.c  idz-dll.h  idzhook.def  jvs.c  jvs.h  meson.build  zinput.c  zinput.h
idzio/: backend.h  config.c  config.h  di-dev.c  di-dev.h  di.c  di.h  dllmain.c  idzio.c  idzio.def  idzio.h  meson.build  shifter.c  shifter.h  wnd.c  wnd.h  xi.c  xi.h
jvs/: jvs-bus.c  jvs-bus.h  jvs-cmd.h  jvs-frame.c  jvs-frame.h  jvs-util.c  jvs-util.h  meson.build
minihook/: dllmain.c  meson.build  minihook.def
mu3hook/: config.c  config.h  dllmain.c  io4.c  io4.h  meson.build  mu3-dll.c  mu3-dll.h  mu3hook.def  unity.c  unity.h
mu3io/: meson.build  mu3io.c  mu3io.def  mu3io.h
nu/: ds.c  ds.h  eeprom.c  gpio.c  gpio.h  guid.c  hwmon.c  hwmon.h  jvs.c  meson.build  nusec.c  nvram.c  sram.c
platform/: amvideo.c  amvideo.h  clock.c  clock.h  config.c  config.h  dns.c  dns.h  hwmon.c  hwmon.h  hwreset.c  hwreset.h  meson.build  misc.c  misc.h  netenv.c  netenv.h  nusec.c  nusec.h  pcbid.c  pcbid.h  platform.c  platform.h  vfs.c  vfs.h
reg/: chunithm.reg
spike/: chunithm-1.25.00.txt
subprojects/: capnhook.wrap
util/: async.c  async.h  clock.c  clock.h  crc.c  crc.h  dll-bind.c  dll-bind.h  dprintf.c  dprintf.h  dump.c  dump.h  fdshark.c  fdshark.h  gfx.c  gfx.h  meson.build  setupapi.c  spike.c  spike.h  str.c  str.h
zinput/: dllmain.c  meson.build  zinput.def
