board_lib = static_library(
    'board',
    include_directories : inc,
    implicit_include_directories : false,
    c_pch : '../precompiled.h',
    dependencies : [
        capnhook.get_variable('hook_dep'),
    ],
    link_with : [
        iccard_lib,
    ],
    sources : [
        'aime-dll.c',
        'aime-dll.h',
        'config.c',
        'config.h',
        'guid.c',
        'guid.h',
        'io3.c',
        'io3.h',
        'io4.c',
        'io4.h',
        'sg-cmd.c',
        'sg-cmd.h',
        'sg-frame.c',
        'sg-frame.h',
        'sg-led.c',
        'sg-led.h',
        'sg-led-cmd.h',
        'sg-nfc.c',
        'sg-nfc.h',
        'sg-nfc-cmd.h',
        'sg-reader.c',
        'sg-reader.h',
        'slider-cmd.h',
        'slider-frame.c',
        'slider-frame.h',
        'vfd.c',
        'vfd.h',
    ],
)
