shared_library(
    'chunihook',
    name_prefix : '',
    include_directories : inc,
    implicit_include_directories : false,
    vs_module_defs : 'chunihook.def',
    c_pch : '../precompiled.h',
    dependencies : [
        capnhook.get_variable('hook_dep'),
        capnhook.get_variable('hooklib_dep'),
    ],
    link_with : [
        aimeio_lib,
        amex_lib,
        board_lib,
        chuniio_lib,
        hooklib_lib,
        jvs_lib,
        platform_lib,
        util_lib,
    ],
    sources : [
        'chuni-dll.c',
        'chuni-dll.h',
        'config.c',
        'config.h',
        'dllmain.c',
        'jvs.c',
        'jvs.h',
        'slider.c',
        'slider.h',
    ],
)
