shared_library(
    'divahook',
    name_prefix : '',
    include_directories : inc,
    implicit_include_directories : false,
    vs_module_defs : 'divahook.def',
    c_pch : '../precompiled.h',
    dependencies : [
        capnhook.get_variable('hook_dep'),
        capnhook.get_variable('hooklib_dep'),
    ],
    link_with : [
        aimeio_lib,
        amex_lib,
        board_lib,
        divaio_lib,
        hooklib_lib,
        jvs_lib,
        platform_lib,
        util_lib,
    ],
    sources : [
        'config.c',
        'config.h',
        'diva-dll.c',
        'diva-dll.h',
        'dllmain.c',
        'jvs.c',
        'jvs.h',
        'slider.c',
        'slider.h',
    ],
)
