divaio_dll = shared_library(
    'divaio',
    name_prefix : '',
    include_directories : inc,
    implicit_include_directories : false,
    vs_module_defs : 'divaio.def',
    c_pch : '../precompiled.h',
    sources : [
        'divaio.c',
        'divaio.h',
        'config.c',
        'config.h',
    ],
)
