hooklib_lib = static_library(
    'hooklib',
    include_directories : inc,
    implicit_include_directories : false,
    c_pch : '../precompiled.h',
    dependencies : [
        capnhook.get_variable('hook_dep'),
    ],
    sources : [
        'clock.c',
        'clock.h',
        'dll.c',
        'dll.h',
        'fdshark.c',
        'fdshark.h',
        'gfx.c',
        'gfx.h',
        'path.c',
        'path.h',
        'reg.c',
        'reg.h',
        'setupapi.c',
        'setupapi.h',
        'spike.c',
        'spike.h',
    ],
)
