idzio_dll = shared_library(
    'idzio',
    name_prefix : '',
    include_directories : inc,
    implicit_include_directories : false,
    vs_module_defs : 'idzio.def',
    c_pch : '../precompiled.h',
    dependencies : [
        dinput8_lib,
        dxguid_lib,
        xinput_lib,
    ],
    link_with : [
        util_lib,
    ],
    sources : [
        'backend.h',
        'config.c',
        'config.h',
        'di.c',
        'di.h',
        'dllmain.c',
        'idzio.h',
        'shifter.c',
        'shifter.h',
        'wnd.c',
        'wnd.h',
        'xi.c',
        'xi.h',
    ],
)
