nu_lib = static_library(
    'nu',
    include_directories : inc,
    implicit_include_directories : false,
    c_pch : '../precompiled.h',
    dependencies : [
        capnhook.get_variable('hook_dep'),
        capnhook.get_variable('hooklib_dep'),
    ],
    sources : [
        'ds.c',
        'ds.h',
        'eeprom.c',
        'eeprom.h',
        'gpio.c',
        'gpio.h',
        'guid.c',
        'jvs.c',
        'jvs.h',
        'hwmon.c',
        'hwmon.h',
        'nusec.c',
        'nusec.h',
        'nvram.c',
        'nvram.h',
        'sram.c',
        'sram.h',
    ],
)
