platform_lib = static_library(
    'platform',
    include_directories : inc,
    implicit_include_directories : false,
    c_pch : '../precompiled.h',
    dependencies : [
        capnhook.get_variable('hook_dep'),
        shlwapi_lib,
    ],
    sources : [
        'amvideo.c',
        'amvideo.h',
        'clock.c',
        'clock.h',
        'config.c',
        'config.h',
        'dns.c',
        'dns.h',
        'hwmon.c',
        'hwmon.h',
        'hwreset.c',
        'hwreset.h',
        'misc.c',
        'misc.h',
        'netenv.c',
        'netenv.h',
        'nusec.c',
        'nusec.h',
        'pcbid.c',
        'pcbid.h',
        'platform.c',
        'platform.h',
        'vfs.c',
        'vfs.h',
    ],
)
